# Vetta

./: .gitignore  README.md  app.py  fill_hiking_route_database.py  find_hiking_routes.py  find_nearby_huts.py  hut_inclusion.csv  load_hut_data.py  map_included_huts.py  pyproject.toml  update_hut_inclusion.py
web/: app.js  index.html  styles.css
